# ESP32_OTA_programmer

./: CMakeLists.txt
arduino/OTA_Sample/: OTA_Sample.ino  ota.cpp  ota.h
src/: OTAUpdate.cpp
